Fix big image stretch behavior

--- a/styles.css
+++ b/styles.css
@@ -1,119 +1,118 @@
 * {
-    font-family: roboto;
-  /*   border: 2px solid yellow; */
-  }
-  .header, .section1, .footer {
-      background-color: #1F2937;
-  }
-  .flex {
-      display:flex;
-  }
-  
-  .catlogo {width: 80px}
-  
-  ul {
-      list-style: none;
-      font-size: 18px;    
-      gap:15px;
-      flex-wrap:wrap;
-      justify-content: flex-end;    
-  }
-  
-  a:link, a:visited, a:hover, a:active {
-    text-decoration: none;
-    color: #E5E7Eb;
-  }
-  
-  .header {
-      justify-content: space-between;
-      align-items:center;
-      padding: 0px 100px;    
-  }
-  
-  .header-logo {
-      font-size: 24px;
-      color: #F9FaF8;
-      flex-shrink: 0;
-  }
-  
-  .section1 {
-      padding: 0px 100px 50px;
-      
-  }
-  .section1-left .section1-right {
-    width:100%;
-  }
-  
-  .bigimage {
-    margin-top:50px;
-    max-height:100%;
-    max-width:100%;
-    border-radius: 5%;
-    margin-left:auto;
-  }
-  @media only screen and (min-width: 1080px) {
-    img {max-width: 437px}  
-  }
-  
-  @media only screen and (max-width: 756px) {
-    .section1, .illustrations {flex-wrap:wrap}  
-    .section1, .header {padding:0px 25px;}
-  }
-  
-  .secondary-text {
-      font-size: 18px;
-      color:#E5E7Eb;
-      margin-top: 0px;
-  }
-  .main-text {
-      font-size: 48px;
-      font-weight: bolder;
-      color: #F9FaF8;
-      margin-bottom: 0px;
-  }
-  button {
-      align-self:flex-start;
-      background-color:#3882F6;
-      border-radius: 7px;
-      color:#FFFF;
-      font-weight:bold;
-      padding: 5px 25px;
-      margin-top: auto;
-  }
-  
-  .section1-right {
-    width:100%
-  }
-  .section1-left {
-    flex-direction:column;
-  }
-  
-  .randominfo {
-    font-size:36px;
-    font-weight:bolder;
-    color: #1F2937;
-    text-align:center;
-    margin-bottom:0px;
-  }
-  .illustrations {
-    justify-content:center;
-    gap:60px;  
-  }
-  
-  .section2content {
-    width:140px;
-  
-  }
-  .imgdescription {
-    text-align:center;
-  }
-  .illustration {
-    border: 2px solid blue;
-    width: 140px;
-    height:140px;
-    margin-top:40px;
-    border-radius:10px;
-  }
-  .section2 {margin-bottom: 100px}
-  
-  .illustrations {flex-wrap:wrap} 
+  font-family: roboto;
+/*   border: 2px solid yellow; */
+}
+.header, .section1, .footer {
+    background-color: #1F2937;
+}
+.flex {
+    display:flex;
+}
+
+.catlogo {width: 80px}
+
+ul {
+    list-style: none;
+    font-size: 18px;    
+    gap:15px;
+    flex-wrap:wrap;
+    justify-content: flex-end;    
+}
+
+a:link, a:visited, a:hover, a:active {
+  text-decoration: none;
+  color: #E5E7Eb;
+}
+
+.header {
+    justify-content: space-between;
+    align-items:center;
+    padding: 0px 100px;    
+}
+
+.header-logo {
+    font-size: 24px;
+    color: #F9FaF8;
+    flex-shrink: 0;
+}
+
+.section1 {
+    padding: 0px 100px 50px;
+    
+}
+.section1-left .section1-right {
+  width:100%;
+}
+
+.bigimage {
+  margin-top:50px;
+  max-height:100%;
+  max-width:100%;
+  border-radius: 5%;
+  margin-left:auto;
+}
+@media only screen and (min-width: 1080px) {
+  .bigimage {max-width: 437px;}  
+}
+
+@media only screen and (max-width: 756px) {
+  .section1, .illustrations {flex-wrap:wrap}  
+  .section1, .header {padding:0px 25px;}
+}
+
+.secondary-text {
+    font-size: 18px;
+    color:#E5E7Eb;
+    margin-top: 0px;
+}
+.main-text {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FaF8;
+    margin-bottom: 0px;
+}
+button {
+    align-self:flex-start;
+    background-color:#3882F6;
+    border-radius: 7px;
+    color:#FFFF;
+    font-weight:bold;
+    padding: 5px 25px;
+    margin-top: auto;
+}
+
+.section1-right {
+  width:100%
+}
+.section1-left {
+  flex-direction:column;
+}
+
+.randominfo {
+  font-size:36px;
+  font-weight:bolder;
+  color: #1F2937;
+  text-align:center;
+  margin-bottom:0px;
+}
+.illustrations {
+  justify-content:center;
+  gap:60px;  
+  flex-wrap:wrap
+}
+
+.section2content {
+  width:140px;
+
+}
+.imgdescription {
+  text-align:center;
+}
+.illustration {
+  border: 2px solid blue;
+  width: 140px;
+  height:140px;
+  margin-top:40px;
+  border-radius:10px;
+}
+.section2 {margin-bottom: 100px}
